--- a/board/at91sam9x5ek/at91sam9x5eksd_linux_m18_defconfig
+++ b/board/at91sam9x5ek/at91sam9x5eksd_linux_m18_defconfig
@@ -92,7 +92,7 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2 earlyprintk=serial"
+CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait irqpoll"
 CONFIG_OS_IMAGE_NAME="uImage"
 CONFIG_JUMP_ADDR="0x22000000"
 # CONFIG_OF_LIBFDT is not set
