--- a/board/at91sam9x5ek/cryocon_defconfig
+++ b/board/at91sam9x5ek/cryocon_defconfig
@@ -99,7 +99,7 @@ CONFIG_GLBDRV_ADDR="0x20068000"
 # CONFIG_LONG_TEST is not set
 # CONFIG_DEBUG is not set
 CONFIG_HW_INIT=y
-# CONFIG_USER_HW_INIT is not set
+CONFIG_USER_HW_INIT=y
 # CONFIG_THUMB is not set
 # CONFIG_SCLK is not set
 # CONFIG_SX_AT91 is not set
