--- a/board/Config.in
+++ b/board/Config.in
@@ -152,6 +152,7 @@ config	CONFIG_AT91SAM9X5EK
 	select ALLOW_NANDFLASH_RECOVERY
 	select ALLOW_PIO3
 	select CPU_HAS_PMECC
+    select CONFIG_LOAD_ONE_WIRE
 	help
 	  Use the AT91SAM9X5EK Development board
 
