--- a/board/at91sam9x5ek/at91sam9x5eknand_linux_m54_defconfig
+++ b/board/at91sam9x5ek/at91sam9x5eknand_linux_m54_defconfig
@@ -105,7 +105,7 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 ubi.mtd=1 mtdparts=atmel_nand:8M(bootstrap/uboot/kernel)ro,128M(rootfs),-(varfs) root=ubi0:rootfs rootfstype=ubifs"
+CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 mtdparts=atmel_nand:8M(bootstrap/uboot/kernel)ro,128M(rootfs),-(varfs) root=/dev/mtdblock1 rootfstype=ext2 rw"
 CONFIG_IMG_ADDRESS="0x00200000"
 CONFIG_IMG_SIZE="0x300000"
 CONFIG_JUMP_ADDR="0x22000000"
