--- a/board/at91sam9x5ek/at91sam9x5eksd_linux_dt_defconfig
+++ b/board/at91sam9x5ek/at91sam9x5eksd_linux_dt_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Thu Apr 11 16:46:45 2013
+# Thu Jan 23 15:03:43 2014
 #
 HAVE_DOT_CONFIG=y
 CONFIG_BOARDNAME="at91sam9x5ek"
@@ -92,8 +92,8 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 rootdelay=2"
-CONFIG_OS_IMAGE_NAME="image.bin"
+CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait"
+CONFIG_OS_IMAGE_NAME="uImage"
 CONFIG_JUMP_ADDR="0x22000000"
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_FILENAME="ek.dtb"
@@ -106,6 +106,6 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_VERY_LOUD is not set
 CONFIG_HW_INIT=y
 # CONFIG_USER_HW_INIT is not set
-CONFIG_THUMB=y
+# CONFIG_THUMB is not set
 CONFIG_SCLK=y
 CONFIG_DISABLE_WATCHDOG=y
