--- a/board/at91sam9x5ek/m18i_defconfig
+++ b/board/at91sam9x5ek/m18i_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Mon Dec  9 12:32:04 2013
+# Mon Feb 24 17:01:21 2014
 #
 HAVE_DOT_CONFIG=y
 CONFIG_BOARDNAME="at91sam9x5ek"
@@ -92,10 +92,12 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait"
+CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait irqpoll"
 CONFIG_OS_IMAGE_NAME="uImage"
 CONFIG_JUMP_ADDR="0x22000000"
-# CONFIG_OF_LIBFDT is not set
+CONFIG_OF_LIBFDT=y
+CONFIG_OF_FILENAME="m18i"
+CONFIG_OF_ADDRESS="0x21000000"
 CONFIG_IMAGE_NAME="linux"
 CONFIG_HW_INIT=y
 CONFIG_USER_HW_INIT=y
