--- a/board/at91sam9x5ek/m18i_barebox_defconfig
+++ b/board/at91sam9x5ek/m18i_barebox_defconfig
@@ -99,18 +99,15 @@ CONFIG_LOAD_UBOOT=y
 # CONFIG_LOAD_1MB is not set
 # CONFIG_LOAD_4MB is not set
 # CONFIG_LOAD_64KB is not set
-CONFIG_IMG_ADDRESS="0x8000"
-CONFIG_IMG_SIZE="0x18000"
+CONFIG_IMG_ADDRESS="0x4000"
+CONFIG_IMG_SIZE="0x1d000"
 CONFIG_JUMP_ADDR="0x26F00000"
 #
 # U-Boot Image Storage Setup
 #
 CONFIG_IMAGE_NAME="uboot"
 # CONFIG_LONG_TEST is not set
-CONFIG_DEBUG=y
-# CONFIG_DEBUG_INFO is not set
-# CONFIG_DEBUG_LOUD is not set
-CONFIG_DEBUG_VERY_LOUD=y
+# CONFIG_DEBUG is not set
 CONFIG_HW_INIT=y
 # CONFIG_USER_HW_INIT is not set
 # CONFIG_THUMB is not set
