--- a/board/at91sam9x5ek/at91sam9x5eksd_linux_m54_defconfig
+++ b/board/at91sam9x5ek/at91sam9x5eksd_linux_m54_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Fri Jan 10 13:20:45 2014
+# Wed Sep 10 13:52:29 2014
 #
 HAVE_DOT_CONFIG=y
 CONFIG_BOARDNAME="at91sam9x5ek"
@@ -42,7 +42,7 @@ CONFIG_BUS_SPEED_100MHZ=y
 ALLOW_PIO3=y
 CONFIG_HAS_PIO3=y
 CPU_HAS_PMECC=y
-CONFIG_LOAD_ONE_WIRE=y
+# CONFIG_LOAD_ONE_WIRE is not set
 # CONFIG_MMC_SUPPORT is not set
 
 #
@@ -65,8 +65,8 @@ CONFIG_RAM_128MB=y
 # CONFIG_RAM_512MB is not set
 # CONFIG_DATAFLASH is not set
 # CONFIG_FLASH is not set
+# CONFIG_NANDFLASH is not set
 CONFIG_SDCARD=y
-CONFIG_NANDFLASH=y
 CONFIG_MEMORY="sdcard"
 
 #
@@ -77,29 +77,9 @@ CONFIG_FATFS=y
 CONFIG_LONG_FILENAME=y
 ALLOW_DATAFLASH_RECOVERY=y
 ALLOW_BOOT_FROM_DATAFLASH_CS0=y
-
-#
-# NAND Flash configuration
-#
-# CONFIG_ENABLE_SW_ECC is not set
-CONFIG_USE_PMECC=y
-# CONFIG_ON_DIE_ECC is not set
-
-#
-# PMECC Configuration
-#
-CONFIG_PMECC_CORRECT_BITS_2=y
-# CONFIG_PMECC_CORRECT_BITS_4 is not set
-# CONFIG_PMECC_CORRECT_BITS_8 is not set
-# CONFIG_PMECC_CORRECT_BITS_12 is not set
-# CONFIG_PMECC_CORRECT_BITS_24 is not set
-CONFIG_PMECC_SECTOR_SIZE_512=y
-# CONFIG_PMECC_SECTOR_SIZE_1024 is not set
-# CONFIG_NANDFLASH_SMALL_BLOCKS is not set
-CONFIG_NANDFLASH_RECOVERY=y
 ALLOW_NANDFLASH_RECOVERY=y
 CONFIG_BOOTSTRAP_MAXSIZE="23000"
-CONFIG_PROJECT="nandflash"
+CONFIG_PROJECT="sdcard"
 # CONFIG_LOAD_UBOOT is not set
 CONFIG_LOAD_LINUX=y
 # CONFIG_LOAD_ANDROID is not set
@@ -112,18 +92,18 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait mtdparts=atmel_nand:8M(bootstrap/uboot/kernel)ro,-(rootfs) ubi.mtd=1"
+CONFIG_LINUX_KERNEL_ARG_STRING="mem=128M console=ttyS0,115200 root=/dev/mmcblk0p2 ro rootwait mtdparts=atmel_nand:8M(bootstrap/uboot/kernel)ro,-(rootfs) ubi.mtd=1 earlyprintk"
 CONFIG_OS_IMAGE_NAME="uImage"
-CONFIG_IMG_ADDRESS="0x00200000"
-CONFIG_IMG_SIZE="0x300000"
 CONFIG_JUMP_ADDR="0x22000000"
-# CONFIG_OF_LIBFDT is not set
+CONFIG_OF_LIBFDT=y
+CONFIG_OF_FILENAME="m54"
+CONFIG_OF_ADDRESS="0x21000000"
 CONFIG_IMAGE_NAME="linux"
 # CONFIG_LONG_TEST is not set
-# CONFIG_DEBUG is not set
+CONFIG_DEBUG=y
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_LOUD is not set
-# CONFIG_DEBUG_VERY_LOUD is not set
+CONFIG_DEBUG_VERY_LOUD=y
 CONFIG_HW_INIT=y
 CONFIG_USER_HW_INIT=y
 # CONFIG_THUMB is not set
