--- a/board/at91sam9x5ek/m54_defconfig
+++ b/board/at91sam9x5ek/m54_defconfig
@@ -92,11 +92,11 @@ CONFIG_LOAD_LINUX=y
 #
 CONFIG_OS_MEM_BANK="0x20000000"
 CONFIG_OS_MEM_SIZE="0x8000000"
-CONFIG_LINUX_KERNEL_ARG_STRING="root=/dev/mmcblk0p2 rootwait ro console=ttyS0,115200 earlyprintk initcall_debug fb640x480 vga=785"
+CONFIG_LINUX_KERNEL_ARG_STRING="root=/dev/mmcblk0p2 rootwait ro console=ttyS0,115200 earlyprintk fb640x480 vga=785"
 CONFIG_OS_IMAGE_NAME="uImage"
 CONFIG_JUMP_ADDR="0x22000000"
 CONFIG_OF_LIBFDT=y
-CONFIG_OF_FILENAME="m24i"
+CONFIG_OF_FILENAME="m54"
 CONFIG_OF_ADDRESS="0x21000000"
 CONFIG_IMAGE_NAME="linux"
 # CONFIG_LONG_TEST is not set
